- adding new project configuration variable to build.cfg: TargetHls = vivado,2017.1

--- a/demos/sort_demo_vivado_test/build.cfg
+++ b/demos/sort_demo_vivado_test/build.cfg
@@ -16,6 +16,7 @@ TargetOS = linux
 #TargetXil = ise,14.7
 #TargetXil = vivado,2016.2
 TargetXil = vivado,2017.1
+TargetHls = vivado,2017.1
 SystemClock = System
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer
