Added API for dynamic clock reconfiguration.
* Reconfiguration of clock even at runtime without reset.
  => clock will be disabled during reconfiguration and start
     without glitches after that (throu BUFGCE)
  => might cause everything to stall during reconfiguration since
     osif is arbitrated into a single interface

* Automatically generated API functions for dynamic clocks:
  reconos_clock_<<ClockName>>_set(frequencykHz)

* Extended sort demo to reconfigure its clock at runtime.

--- a/demos/sort_demo/build.cfg
+++ b/demos/sort_demo/build.cfg
@@ -29,9 +29,9 @@ LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer
 ClockSource = static
 ClockFreq = 100000000
 
-#[Clock@Threads]
-#ClockSource = dynamic
-#ClockFreq = 120000000
+[Clock@Threads]
+ClockSource = dynamic
+ClockFreq = 120000000
 
 
 #
@@ -43,9 +43,8 @@ ClockFreq = 100000000
 #
 [HwSlot@SortDemo(0:1)]
 Id = 0
-#Clock = Threads
-Clock = System
-
+Clock = Threads
+#Clock = System
 
 #
 # Resource definition
@@ -66,6 +65,8 @@ Acknowledge = mbox,128
 #
 [ReconosThread@SortDemo]
 Slot = SortDemo(*)
-HwSource = hls
-SwSource = hls
+HwSource = vhdl
+#HwSource = hls
+SwSource = c
+#SwSource = hls
 ResourceGroup = Resources
