Added settings for Vivado to sort demo.

--- a/demos/sort_demo/build.cfg
+++ b/demos/sort_demo/build.cfg
@@ -14,6 +14,8 @@ TargetPart = xc7z020clg484-1
 ReferenceDesign = timer
 TargetOS = linux
 TargetXil = ise,14.7
+#TargetXil = vivado,2016.2
+#TargetHls = vivado,2016.2
 SystemClock = System
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer
