adapted matrixmul demo to work with RDKs export to vivado.

--- a/demos/matrixmul/build.cfg
+++ b/demos/matrixmul/build.cfg
@@ -10,9 +10,12 @@
 [General]
 Name = MatrixMul
 TargetBoard = zedboard,d
-ReferenceDesign = minimal
+TargetPart = xc7z020clg484-1
+ReferenceDesign = timer
 TargetOS = linux
-TargetISE = 14.7
+TargetXil = vivado,2016.2
+#TargetXil = ise,14.7
+#TargetHls = vivado,2016.2
 SystemClock = System
 
 
@@ -58,5 +61,6 @@ Acknowledge = mbox,1
 #
 [ReconosThread@MatrixMul]
 Slot = MatrixMul(*)
-HwSource = hwt_matrixmul_v2_00_a
+HwSource = vhdl
+SwSource = c
 ResourceGroup = Resources
