- improved matrixmul alot. - main program now actually does the strassen matrix split - main program now prints timing statistics - hardware thread now has correct parameters matching the main program

--- a/demos/matrixmul/build.cfg
+++ b/demos/matrixmul/build.cfg
@@ -13,10 +13,12 @@ TargetBoard = zedboard,d
 TargetPart = xc7z020clg484-1
 ReferenceDesign = timer
 TargetOS = linux
-TargetXil = vivado,2016.2
+TargetXil = vivado,2017.1
 #TargetXil = ise,14.7
 #TargetHls = vivado,2016.2
 SystemClock = System
+CFlags = -I $(RECONOS)/linux/tools/timer
+LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer -lm
 
 
 #
@@ -37,7 +39,7 @@ ClockFreq = 100000000
 #   IsReconfigurable - reconfigurable slot or not
 #   Clock            - clock connected to the slot
 #
-[HwSlot@MatrixMul(0:1)]
+[HwSlot@MatrixMul(0:3)]
 Id = 0
 Clock = System
 
@@ -48,8 +50,8 @@ Clock = System
 #   <Name> - type,<optional arguments>
 #
 [ResourceGroup@Resources]
-Address = mbox,1
-Acknowledge = mbox,1
+Address = mbox,128
+Acknowledge = mbox,128
 
 
 #
