--- a/demos/sort_demo/build.cfg
+++ b/demos/sort_demo/build.cfg
@@ -1,11 +1,22 @@
 #
 # General settings
 #
-#   TargetBoard - board to run you application on
-#   TargetOS    - operating system to use
-#   SystemClock - clock of the ReconOS system
-#   CFlags      - additional flags for compilation
-#   LdFlags     - additional flags for linking
+#   Name            - name of your application
+#   TargetBoard     - board to run your application on
+#                       zedboard
+#   TargetPart      - part to run you application on
+#   ReferenceDesign - reference design template
+#                       timer
+#   TargetOS        - operating system to use
+#                       linux
+#   TargetXil       - xilinx tools to use
+#                       vivado,2017.1
+#                       vivado,2016.2
+#                       ise,14.7
+#   TargetHls       - HLS synthesis tool to use
+#   SystemClock     - clock of the ReconOS system (defined below)
+#   CFlags          - additional flags for compilation
+#   LdFlags         - additional flags for linking
 #
 [General]
 Name = SortDemo
@@ -13,18 +24,18 @@ TargetBoard = zedboard,d
 TargetPart = xc7z020clg484-1
 ReferenceDesign = timer
 TargetOS = linux
-TargetXil = ise,14.7
-#TargetXil = vivado,2017.1
-#TargetHls = vivado,2017.1
+TargetXil = vivado,2016.2
 SystemClock = System
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer
 
 
 #
-# Clock definition
+# Clock definition [Clock@<clock_name>]
 #
-#   ClockSource - static or reconfigurable clock
+#   ClockSource - static or dynamic clock
+#                   static
+#                   dynamic
 #   ClockFreq   - initial clock frequency
 #
 [Clock@System]
@@ -37,21 +48,19 @@ ClockFreq = 120000000
 
 
 #
-# Specification of hardware thread slots
+# Specification of hardware thread slots [Thread@<slot_name>(<id_range>)]
 #
 #   Id               - id of the slot
-#   IsReconfigurable - reconfigurable slot or not
 #   Clock            - clock connected to the slot
 #
 [HwSlot@SortDemo(0:1)]
 Id = 0
 Clock = Threads
-#Clock = System
 
 #
-# Resource definition
+# Resource definition [ResourceGroup@<group_name>]
 #
-#   <Name> - type,<optional arguments>
+#   <resource_name> - type,<optional arguments>
 #
 [ResourceGroup@Resources]
 Address = mbox,128
@@ -59,16 +68,21 @@ Acknowledge = mbox,128
 
 
 #
-# Specification of thread types
+# Specification of thread types [ReconosThread@<thread_name>]
 #
 #   Slot          - slot to implement the hardware thread in
-#   Source        - source if the hardware thread
+#                     <slot_name>(<id>)
+#   HwSource      - source of the hardware thread
+#                     vhdl
+#                     hls
+#   SwSource      - source of the software thread
+#                     c
 #   ResourceGroup - resources of the hardware thread
+#                     <group_name>
 #
 [ReconosThread@SortDemo]
 Slot = SortDemo(*)
 HwSource = vhdl
 #HwSource = hls
 SwSource = c
-#SwSource = hls
 ResourceGroup = Resources
