Modified build.cfg of sort_demo for ITX board

--- a/demos/sort_demo/build.cfg
+++ b/demos/sort_demo/build.cfg
@@ -20,8 +20,10 @@
 #
 [General]
 Name = SortDemo
-TargetBoard = zedboard,d
-TargetPart = xc7z020clg484-1
+#TargetBoard = zedboard,d
+#TargetPart = xc7z020clg484-1
+TargetBoard = mini_itx_7z100,D
+TargetPart = xc7z100ffg900-2
 ReferenceDesign = timer
 TargetOS = linux
 TargetXil = vivado,2016.2
