--- a/demos/matrixmul/build.cfg
+++ b/demos/matrixmul/build.cfg
@@ -14,6 +14,7 @@ TargetPart = xc7z020clg484-1
 ReferenceDesign = timer
 TargetOS = linux
 TargetXil = vivado,2019.1
+#XilinxPath = /tools/Xilinx
 SystemClock = System
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer -lm
