Standardized demo build.cfg files

--- a/demos/reconf_sort_matrixmul/build.cfg
+++ b/demos/reconf_sort_matrixmul/build.cfg
@@ -1,29 +1,37 @@
 #
 # General settings
 #
-#   TargetBoard - board to run you application on
-#   TargetOS    - operating system to use
-#   SystemClock - clock of the ReconOS system
-#   CFlags      - additional flags for compilation
-#   LdFlags     - additional flags for linking
+#   Name            - name of your application
+#   TargetBoard     - board to run your application on
+#   TargetPart      - part to run your application on
+#   TargetOS        - operating system to use
+#   ReferenceDesign - name of reference design template
+#   SystemClock     - clock of the ReconOS system (defined below)
+#   TargetXil       - Xilinx tool version to use
+#
+#   Optional:
+#   TargetHls       - define different tool version to use for HLS (e.g. "vivado,2016.2")
+#   XilinxPath      - define path to Xilinx tools (default is /opt/Xilinx)
+#   CFlags          - additional flags for compilation
+#   LdFlags         - additional flags for linking
 #
 [General]
 Name = ReconfSortMatrixmul
 TargetBoard = zedboard,d
 TargetPart = xc7z020clg484-1
-ReferenceDesign = timer
 TargetOS = linux
+ReferenceDesign = timer
+SystemClock = System
 TargetXil = vivado,2019.1
 #XilinxPath = /tools/Xilinx
-SystemClock = System
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer -lm
 
 
 #
-# Clock definition
+# Clock definition [Clock@<clock_name>]
 #
-#   ClockSource - static or reconfigurable clock
+#   ClockSource - static or dynamic clock
 #   ClockFreq   - initial clock frequency
 #
 [Clock@System]
@@ -32,11 +40,11 @@ ClockFreq = 100000000
 
 [Clock@Threads]
 ClockSource = dynamic
-ClockFreq = 120000000
+ClockFreq = 100000000
 
 
 #
-# Specification of hardware thread slots
+# Specification of hardware thread slots [Thread@<slot_name>(<id_range>)]
 #
 #   Id               - id of the slot
 #   Clock            - clock connected to the slot
@@ -46,10 +54,11 @@ Id = 0
 #Clock = Threads
 Clock = System
 
+
 #
-# Resource definition
+# Resource definition [ResourceGroup@<group_name>]
 #
-#   <Name> - type,<optional arguments>
+#   <resource_name> = type,<optional arguments>
 #
 [ResourceGroup@Resources]
 Address = mbox,128
@@ -57,13 +66,14 @@ Acknowledge = mbox,128
 
 
 #
-# Specification of thread types
+# Specification of thread types [ReconosThread@<thread_name>]
 #
-#   Slot          - slot to implement the hardware thread in
-#   Source        - source if the hardware thread
+#   Slot          - slot to implement the hardware thread in 
+#                     <slot_name>(<id>)
+#   HwSource      - source of the hardware thread (e.g. "vhdl" or "hls")
+#   SwSource      - source of the software thread
 #   ResourceGroup - resources of the hardware thread
 #
-
 [ReconosThread@Reconf]
 Slot = ReconfSortMatrixmul(*)
 HwSource = vhdl
@@ -71,10 +81,8 @@ ResourceGroup = Resources
 
 [ReconosThread@SortDemo]
 SwSource = c
-#SwSource = hls
 ResourceGroup = Resources
 
 [ReconosThread@MatrixMul]
 SwSource = c
-#SwSource = hls
 ResourceGroup = Resources
