--- a/demos/sort_demo/build.cfg
+++ b/demos/sort_demo/build.cfg
@@ -3,17 +3,15 @@
 #
 #   Name            - name of your application
 #   TargetBoard     - board to run your application on
-#                       zedboard
-#   TargetPart      - part to run you application on
-#   ReferenceDesign - reference design template
-#                       timer
+#   TargetPart      - part to run your application on
 #   TargetOS        - operating system to use
-#                       linux
-#   TargetXil       - xilinx tools to use
-#                       vivado,2017.1
-#                       vivado,2016.2
-#   TargetHls       - HLS synthesis tool to use
+#   ReferenceDesign - name of reference design template
 #   SystemClock     - clock of the ReconOS system (defined below)
+#   TargetXil       - Xilinx tool version to use
+#
+#   Optional:
+#   TargetHls       - define different tool version to use for HLS (e.g. "vivado,2016.2")
+#   XilinxPath      - define path to Xilinx tools (default is /opt/Xilinx)
 #   CFlags          - additional flags for compilation
 #   LdFlags         - additional flags for linking
 #
@@ -21,11 +19,11 @@
 Name = SortDemo
 TargetBoard = zedboard,d
 TargetPart = xc7z020clg484-1
-ReferenceDesign = timer
 TargetOS = linux
+ReferenceDesign = timer
+SystemClock = System
 TargetXil = vivado,2019.1
 #XilinxPath = /tools/Xilinx
-SystemClock = System
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer
 
@@ -34,8 +32,6 @@ LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer
 # Clock definition [Clock@<clock_name>]
 #
 #   ClockSource - static or dynamic clock
-#                   static
-#                   dynamic
 #   ClockFreq   - initial clock frequency
 #
 [Clock@System]
@@ -57,10 +53,11 @@ ClockFreq = 100000000
 Id = 0
 Clock = Threads
 
+
 #
 # Resource definition [ResourceGroup@<group_name>]
 #
-#   <resource_name> - type,<optional arguments>
+#   <resource_name> = type,<optional arguments>
 #
 [ResourceGroup@Resources]
 Address = mbox,128
@@ -70,15 +67,11 @@ Acknowledge = mbox,128
 #
 # Specification of thread types [ReconosThread@<thread_name>]
 #
-#   Slot          - slot to implement the hardware thread in
+#   Slot          - slot to implement the hardware thread in 
 #                     <slot_name>(<id>)
-#   HwSource      - source of the hardware thread
-#                     vhdl
-#                     hls
+#   HwSource      - source of the hardware thread (e.g. "vhdl" or "hls")
 #   SwSource      - source of the software thread
-#                     c
 #   ResourceGroup - resources of the hardware thread
-#                     <group_name>
 #
 [ReconosThread@SortDemo]
 Slot = SortDemo(*)
