--- a/demos/sort_demo/build.cfg
+++ b/demos/sort_demo/build.cfg
@@ -17,12 +17,12 @@
 #
 [General]
 Name = SortDemo
-TargetBoard = zedboard,d
-TargetPart = xc7z020clg484-1
+TargetBoard = zcu102,0
+TargetPart = xczu9eg-ffvb1156-2-e
 TargetOS = linux
 ReferenceDesign = timer
 SystemClock = System
-TargetXil = vivado,2019.1
+TargetXil = vivado,2018.2
 #XilinxPath = /tools/Xilinx
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer
