Sortdemo compatibility with 2020.1, disabed static linkage in default template

--- a/demos/sort_demo/build.cfg
+++ b/demos/sort_demo/build.cfg
@@ -22,8 +22,8 @@ TargetPart = xczu9eg-ffvb1156-2-e
 TargetOS = linux
 ReferenceDesign = timer
 SystemClock = System
-TargetXil = vivado,2018.2
-#XilinxPath = /tools/Xilinx
+TargetXil = vivado,2020.1
+XilinxPath = /mnt/data/Xilinx
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer
 
