--- a/templates/app_linux/Makefile
+++ b/templates/app_linux/Makefile
@@ -2,7 +2,7 @@
 
 CC = $(CROSS_COMPILE)gcc
 CFLAGS += -Wall -I <<REPO_REL>> -I lib/include -D RECONOS_OS_<<OS>> -D RECONOS_BOARD_<<BOARD>> <<CFLAGS>>
-LDFLAGS += -static -lpthread <<LDFLAGS>>
+LDFLAGS += -lpthread <<LDFLAGS>>
 
 MKDIRP = mkdir -p
 
