Ported matrixmul demo to 64-bit

--- a/demos/matrixmul/build.cfg
+++ b/demos/matrixmul/build.cfg
@@ -17,13 +17,13 @@
 #
 [General]
 Name = MatrixMul
-TargetBoard = zedboard,d
-TargetPart = xc7z020clg484-1
+TargetBoard = zcu102,0
+TargetPart = xczu9eg-ffvb1156-2-e
 TargetOS = linux
 ReferenceDesign = timer
 SystemClock = System
-TargetXil = vivado,2019.1
-#XilinxPath = /tools/Xilinx
+TargetXil = vivado,2020.1
+XilinxPath = /mnt/data/Xilinx
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer -lm
 
@@ -38,6 +38,9 @@ LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer -lm
 ClockSource = static
 ClockFreq = 100000000
 
+[Clock@Threads]
+ClockSource = dynamic
+ClockFreq = 100000000
 
 #
 # Specification of hardware thread slots [Thread@<slot_name>(<id_range>)]
@@ -47,7 +50,7 @@ ClockFreq = 100000000
 #
 [HwSlot@MatrixMul(0:3)]
 Id = 0
-Clock = System
+Clock = Threads
 
 
 #
