Added synchronous 64-bit FIFO core (used by matrixmul demo)

--- a/demos/matrixmul/build.cfg
+++ b/demos/matrixmul/build.cfg
@@ -38,9 +38,6 @@ LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer -lm
 ClockSource = static
 ClockFreq = 100000000
 
-[Clock@Threads]
-ClockSource = dynamic
-ClockFreq = 100000000
 
 #
 # Specification of hardware thread slots [Thread@<slot_name>(<id_range>)]
@@ -50,7 +47,7 @@ ClockFreq = 100000000
 #
 [HwSlot@MatrixMul(0:3)]
 Id = 0
-Clock = Threads
+Clock = System
 
 
 #
