--- a/demos/reconf_sort_matrixmul/build.cfg
+++ b/demos/reconf_sort_matrixmul/build.cfg
@@ -17,13 +17,13 @@
 #
 [General]
 Name = ReconfSortMatrixmul
-TargetBoard = zedboard,d
-TargetPart = xc7z020clg484-1
+TargetBoard = zcu102,0
+TargetPart = xczu9eg-ffvb1156-2-e
 TargetOS = linux
 ReferenceDesign = timer
 SystemClock = System
-TargetXil = vivado,2019.1
-#XilinxPath = /tools/Xilinx
+TargetXil = vivado,2020.1
+XilinxPath = /mnt/data/Xilinx
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer -lm
 
