--- a/demos/reconf_sort_matrixmul/build.cfg
+++ b/demos/reconf_sort_matrixmul/build.cfg
@@ -26,6 +26,7 @@ TargetXil = vivado,2020.1
 XilinxPath = /mnt/data/Xilinx
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer -lm
+PartialReconfiguration = true
 
 
 #
@@ -51,9 +52,10 @@ ClockFreq = 100000000
 #
 [HwSlot@ReconfSortMatrixmul(0:1)]
 Id = 0
-#Clock = Threads
-Clock = System
-
+Clock = Threads
+Reconfigurable = true
+Region_0 = CLOCKREGION_X2Y0:CLOCKREGION_X3Y0
+Region_1 = CLOCKREGION_X2Y1:CLOCKREGION_X3Y1
 
 #
 # Resource definition [ResourceGroup@<group_name>]
@@ -80,9 +82,13 @@ HwSource = vhdl
 ResourceGroup = Resources
 
 [ReconosThread@SortDemo]
+Slot = ReconfSortMatrixmul(*)
+HwSource = vhdl
 SwSource = c
 ResourceGroup = Resources
 
 [ReconosThread@MatrixMul]
+Slot = ReconfSortMatrixmul(*)
+HwSource = vhdl
 SwSource = c
 ResourceGroup = Resources
