PR is now a project-wide setting instead of a per-slot option

--- a/demos/reconf_sort_matrixmul/build.cfg
+++ b/demos/reconf_sort_matrixmul/build.cfg
@@ -26,7 +26,7 @@ TargetXil = vivado,2020.1
 XilinxPath = /mnt/data/Xilinx
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer -lm
-PartialReconfiguration = true
+PartialReconfiguration = True
 
 
 #
@@ -53,7 +53,6 @@ ClockFreq = 100000000
 [HwSlot@ReconfSortMatrixmul(0:1)]
 Id = 0
 Clock = Threads
-Reconfigurable = true
 Region_0 = CLOCKREGION_X2Y0:CLOCKREGION_X3Y0
 Region_1 = CLOCKREGION_X2Y1:CLOCKREGION_X3Y1
 
