Documentation of PR flow

--- a/demos/reconf_sort_matrixmul/build.cfg
+++ b/demos/reconf_sort_matrixmul/build.cfg
@@ -14,6 +14,7 @@
 #   XilinxPath      - define path to Xilinx tools (default is /opt/Xilinx)
 #   CFlags          - additional flags for compilation
 #   LdFlags         - additional flags for linking
+#   PartialReconfiguration - enable partial reconfiguration for this project
 #
 [General]
 Name = ReconfSortMatrixmul
@@ -49,6 +50,7 @@ ClockFreq = 100000000
 #
 #   Id               - id of the slot
 #   Clock            - clock connected to the slot
+#   Region_<ID>      - pblock region for partial reconfiguration, define for each ID in id_range
 #
 [HwSlot@ReconfSortMatrixmul(0:1)]
 Id = 0
