Modify templates for custom project

--- a/templates/app_linux/Makefile
+++ b/templates/app_linux/Makefile
@@ -4,10 +4,13 @@ CC = $(CROSS_COMPILE)gcc
 CFLAGS += -Wall -I <<REPO_REL>> -I lib/include -D RECONOS_OS_<<OS>> -D RECONOS_BOARD_<<BOARD>> <<CFLAGS>>
 LDFLAGS += -lpthread <<LDFLAGS>>
 
+CXXFLAGS = $(CFLAGS)
+
 MKDIRP = mkdir -p
 
-OBJS = <<generate for OBJS>><<Source>> <<end generate>>
-BUILD_OBJS = $(OBJS:%=_build/%)
+OBJS_RCNS = <<generate for OBJS_RCNS>><<Source>> <<end generate>>
+OBJS_APP = <<generate for OBJS_APP>><<Source>> <<end generate>>
+BUILD_OBJS = $(OBJS_RCNS:%=_build/%) $(OBJS_APP)
 
 all: $(BUILD_OBJS)
 	$(CC) $(BUILD_OBJS) $(LDFLAGS) -o <<NAME>>
@@ -20,8 +23,12 @@ clean:
 
 _build/%.o: %.c
 	$(MKDIRP) $(@D)
-	$(CC) $(CFLAGS) -x c -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 _build/%.o: %.cpp
 	$(MKDIRP) $(@D)
-	$(CC) $(CFLAGS) -x c -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
+
+_build/%.o: %.cc
+	$(MKDIRP) $(@D)
+	$(CC) $(CFLAGS) -c $< -o $@
