Adjust build config

--- a/demos/cache_demo/build.cfg
+++ b/demos/cache_demo/build.cfg
@@ -72,5 +72,5 @@ rt2sw = mbox,128
 [ReconosThread@CacheDemo]
 Slot = CacheDemo(0)
 HwSource = hls
-SwSource = c
+#SwSource = c
 ResourceGroup = Resources
