Add second thread, non-functional

--- a/demos/cache_demo/build.cfg
+++ b/demos/cache_demo/build.cfg
@@ -51,6 +51,10 @@ ClockFreq = 100000000
 Id = 0
 Clock = Threads
 
+[HwSlot@Test(0:0)]
+Id = 1
+Clock = Threads
+
 #
 # Resource definition [ResourceGroup@<group_name>]
 #
@@ -59,6 +63,10 @@ Clock = Threads
 [ResourceGroup@Resources]
 sw2rt = mbox,128
 rt2sw = mbox,128
+
+[ResourceGroup@Rcs]
+tsw2rt = mbox,128
+trt2sw = mbox,128
 
 #
 # Specification of thread types [ReconosThread@<thread_name>]
@@ -72,5 +80,10 @@ rt2sw = mbox,128
 [ReconosThread@CacheDemo]
 Slot = CacheDemo(0)
 HwSource = hls
-#SwSource = c
+SwSource = c
 ResourceGroup = Resources
+
+[ReconosThread@Test]
+Slot = Test(0)
+HwSource = hls
+ResourceGroup = Rcs
