Add second thread, simpler calling

--- a/demos/cache_demo/build.cfg
+++ b/demos/cache_demo/build.cfg
@@ -65,8 +65,8 @@ sw2rt = mbox,128
 rt2sw = mbox,128
 
 [ResourceGroup@Rcs]
-tsw2rt = mbox,128
-trt2sw = mbox,128
+sw2rt = mbox,128
+rt2sw = mbox,128
 
 #
 # Specification of thread types [ReconosThread@<thread_name>]
@@ -86,4 +86,5 @@ ResourceGroup = Resources
 [ReconosThread@Test]
 Slot = Test(0)
 HwSource = hls
+SwSource = c
 ResourceGroup = Rcs
