Adjust build.cfg for all demos

--- a/demos/reconf_sort_matrixmul/build.cfg
+++ b/demos/reconf_sort_matrixmul/build.cfg
@@ -18,13 +18,13 @@
 #
 [General]
 Name = ReconfSortMatrixmul
-TargetBoard = zcu102,0
-TargetPart = xczu9eg-ffvb1156-2-e
+TargetBoard = zcu104,0
+TargetPart = xczu7ev-ffvc1156-2-e
 TargetOS = linux
 ReferenceDesign = timer
 SystemClock = System
 TargetXil = vivado,2020.1
-XilinxPath = /mnt/data/Xilinx
+XilinxPath = /opt/tools
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer -lm
 PartialReconfiguration = True
