Adjust paths to match build server

--- a/demos/dual_thread/build.cfg
+++ b/demos/dual_thread/build.cfg
@@ -17,13 +17,15 @@
 #
 [General]
 Name = DualThread
-TargetBoard = zcu104,0
-TargetPart = xczu7ev-ffvc1156-2-e
+#TargetBoard = zcu104,0
+#TargetPart = xczu7ev-ffvc1156-2-e
+TargetBoard = zcu102,0
+TargetPart = xczu9eg-ffvb1156-2-e
 TargetOS = linux
 ReferenceDesign = timer
 SystemClock = System
 TargetXil = vivado,2020.1
-XilinxPath = /opt/tools
+XilinxPath = /opt/Xilinx
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer -lstdc++ -lm
 
