--- a/demos/reconf_sort_matrixmul/build.cfg
+++ b/demos/reconf_sort_matrixmul/build.cfg
@@ -24,7 +24,7 @@ TargetOS = linux
 ReferenceDesign = timer
 SystemClock = System
 TargetXil = vivado,2020.1
-XilinxPath = /opt/tools
+XilinxPath = /opt/Xilinx
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer -lm
 PartialReconfiguration = True
