--- a/demos/sort_demo/build.cfg
+++ b/demos/sort_demo/build.cfg
@@ -23,7 +23,7 @@ TargetOS = linux
 ReferenceDesign = timer
 SystemClock = System
 TargetXil = vivado,2020.1
-XilinxPath = /opt/tools
+XilinxPath = /opt/Xilinx
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer
 
@@ -49,8 +49,12 @@ ClockFreq = 100000000
 #   Id               - id of the slot
 #   Clock            - clock connected to the slot
 #
-[HwSlot@SortDemo(0:1)]
+[HwSlot@SortDemo(0:0)]
 Id = 0
+Clock = Threads
+
+[HwSlot@SortInverse(0:0)]
+Id = 1
 Clock = Threads
 
 
@@ -60,6 +64,10 @@ Clock = Threads
 #   <resource_name> = type,<optional arguments>
 #
 [ResourceGroup@Resources]
+Address = mbox,128
+Acknowledge = mbox,128
+
+[ResourceGroup@ResourcesInv]
 Address = mbox,128
 Acknowledge = mbox,128
 
@@ -74,8 +82,15 @@ Acknowledge = mbox,128
 #   ResourceGroup - resources of the hardware thread
 #
 [ReconosThread@SortDemo]
-Slot = SortDemo(*)
-HwSource = vhdl
-#HwSource = hls
+Slot = SortDemo(0)
+#HwSource = vhdl
+HwSource = hls
 SwSource = c
 ResourceGroup = Resources
+
+[ReconosThread@SortInverse]
+Slot = SortInverse(0)
+#HwSource = vhdl
+HwSource = hls
+SwSource = c
+ResourceGroup = ResourcesInv
