--- a/demos/cache_demo/build.cfg
+++ b/demos/cache_demo/build.cfg
@@ -23,7 +23,7 @@ TargetOS = linux
 ReferenceDesign = timer
 SystemClock = System
 TargetXil = vivado,2020.1
-XilinxPath = /opt/tools
+XilinxPath = /opt/Xilinx
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer -lstdc++ -lm `pkg-config --cflags --libs opencv`
 
