Add cpp SortDemo code

--- a/demos/sort_demo/build.cfg
+++ b/demos/sort_demo/build.cfg
@@ -53,21 +53,12 @@ ClockFreq = 100000000
 Id = 0
 Clock = Threads
 
-[HwSlot@SortInverse(0:0)]
-Id = 1
-Clock = Threads
-
-
 #
 # Resource definition [ResourceGroup@<group_name>]
 #
 #   <resource_name> = type,<optional arguments>
 #
 [ResourceGroup@Resources]
-Address = mbox,128
-Acknowledge = mbox,128
-
-[ResourceGroup@ResourcesInv]
 Address = mbox,128
 Acknowledge = mbox,128
 
@@ -85,12 +76,6 @@ Acknowledge = mbox,128
 Slot = SortDemo(0)
 #HwSource = vhdl
 HwSource = hls
-SwSource = c
+#SwSource = c
+SwSource = cpp
 ResourceGroup = Resources
-
-[ReconosThread@SortInverse]
-Slot = SortInverse(0)
-#HwSource = vhdl
-HwSource = hls
-SwSource = c
-ResourceGroup = ResourcesInv
