--- a/demos/filter_demo/build.cfg
+++ b/demos/filter_demo/build.cfg
@@ -72,5 +72,5 @@ rt2sw = mbox,128
 [ReconosThread@FilterDemo]
 Slot = FilterDemo(0)
 HwSource = hls
-SwSource = c
+SwSource = cpp
 ResourceGroup = Rcs
