--- a/demos/sort_demo/build.cfg
+++ b/demos/sort_demo/build.cfg
@@ -20,11 +20,11 @@
 #
 [General]
 Name = SortDemo
-TargetBoard = zedboard,d
-TargetPart = xc7z020clg484-1
+TargetBoard = miniitx,d
+TargetPart = xc7z100ffg900-2
 ReferenceDesign = timer
 TargetOS = linux
-TargetXil = vivado,2016.2
+TargetXil = vivado,2020.1
 SystemClock = System
 CFlags = -I $(RECONOS)/linux/tools/timer
 LdFlags = -L $(RECONOS)/linux/tools/timer -ltimer
